--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,7 @@ jobs:
       - run:
           name: Terraform Plan
           command: |
-            pwd
-            cd
+            pwd &&  ls -lrth
             terraform init
             terraform plan
       - run:
