--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,6 @@ jobs:
       - run:
           name: Terraform Apply
           command: |
-            cd
             terraform apply --auto-approve
       - persist_to_workspace:
           root: ./
@@ -37,6 +36,7 @@ jobs:
             - artifacts
   terraform-destory:
     executor: terraform-executor
+    working_directory: ~/repo
     steps:
       - checkout
       - run:
